[project]
name = "robotiive"
version = "0.1.1"
description = "Unofficial script for running Robotiive tasks."
readme = "README.md"
license = {text = "MIT"}
authors = [{ name = "Stanley5249", email = "seer852741@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "httpx-sse==0.4.0",
    "pydantic>=2.10.6",
    "typer>=0.15.2",
]

[project.scripts]
robotiive = "robotiive.cli:app"

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"
